--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,4 +1,9 @@
 <%- include('partials/header'); -%>
 
-<h1> <%= postTitle %></h1>
-<p> <%= postBody %></p>
+<% post.forEach((post) => { %>
+    <h1> <%= post.title %></h1>
+    <p> <%= post.content %></p> 
+    <form action="/delete" method="post">
+        <button type="submit" class="btn btn-sm btn-primary" name="deletePost" value="<%= post._id %>">Delete Post</button>
+    </form>
+<% }); %>
